[tool.poetry]
name = "01-hello_fastapi"
version = "0.1.0"
description = ""
authors = ["AngelLiang <ynanxiu@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
